[gd_scene load_steps=21 format=3 uid="uid://n7fuq2es8b13"]

[ext_resource type="Texture2D" uid="uid://bc4au3byondaw" path="res://sprites/UI/star3.png" id="1"]
[ext_resource type="FontFile" uid="uid://cd41usim7lhx5" path="res://fonts/TTYDfont.otf" id="2"]
[ext_resource type="Texture2D" uid="uid://bc3nx4uhworxs" path="res://sprites/other/shine.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dllj1nylj5a15" path="res://textures/goombario/iconhp.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dv6vm6t7lqe2y" path="res://sprites/UI/border2.png" id="5"]
[ext_resource type="SpriteFrames" uid="uid://qb5ulll4jnnd" path="res://sprites/other/expframes.tres" id="6"]
[ext_resource type="LabelSettings" uid="uid://b3bw580f7is53" path="res://fonts/status_settings.tres" id="6_qywsl"]
[ext_resource type="Texture2D" uid="uid://cwmsn67urqbsw" path="res://sprites/other/coin.png" id="7"]
[ext_resource type="Script" path="res://scripts/Status.gd" id="8"]
[ext_resource type="Texture2D" uid="uid://b7supm8rafo00" path="res://sprites/other/fp.png" id="9"]
[ext_resource type="Texture2D" uid="uid://cxo3lpu0iwn5s" path="res://sprites/mario/iconhp.png" id="10"]

[sub_resource type="ParticleProcessMaterial" id="3"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
angle_min = -5.0
angle_max = 5.0
scale_min = 0.15
scale_max = 0.15

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("2")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("2")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="6"]
fallbacks = Array[Font]([ExtResource("2")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource("7")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource("7")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource("7")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource("7")
region = Rect2(120, 0, 40, 40)

[sub_resource type="SpriteFrames" id="11"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("7")
}, {
"duration": 1.0,
"texture": SubResource("8")
}, {
"duration": 1.0,
"texture": SubResource("9")
}, {
"duration": 1.0,
"texture": SubResource("10")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="Status" type="Control"]
texture_filter = 1
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.028
offset_bottom = 6.2
script = ExtResource("8")

[node name="Status" type="NinePatchRect" parent="."]
self_modulate = Color(0.611765, 0.360784, 0.117647, 0.470588)
texture_filter = 1
layout_mode = 0
offset_left = -13.0
offset_top = -26.0
offset_right = 282.0
offset_bottom = 41.0
pivot_offset = Vector2(11.0771, 25.849)
texture = ExtResource("5")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="HP" type="Control" parent="Status"]
texture_filter = 1
anchors_preset = 0
offset_left = 21.7292
offset_top = 34.7586
offset_right = 61.7292
offset_bottom = 74.7586
tooltip_text = "rrrr"
focus_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="Status/HP"]
texture_filter = 1
position = Vector2(29.2865, 15.7692)
scale = Vector2(1.25, 1.25)
texture = ExtResource("10")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Status/HP/Sprite2D"]
modulate = Color(1, 0.333333, 0.333333, 0.4)
show_behind_parent = true
texture_filter = 1
position = Vector2(0, -3)
amount = 4
process_material = SubResource("3")
texture = ExtResource("1")
local_coords = true

[node name="Label2" type="Label" parent="Status/HP"]
texture_filter = 1
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 47.2172
offset_top = -0.137763
offset_right = 112.217
offset_bottom = -0.137764
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("4")
text = "20/20"
label_settings = ExtResource("6_qywsl")

[node name="Label3" type="Label" parent="Status/HP"]
texture_filter = 1
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.7537
offset_top = 30.3331
offset_right = 95.7538
offset_bottom = 30.3331
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("5")
text = "MARIO"

[node name="SP" type="Control" parent="Status"]
texture_filter = 1
anchors_preset = 0
offset_left = 186.58
offset_top = 30.9587
offset_right = 226.58
offset_bottom = 70.9587

[node name="Sprite2D" type="Sprite2D" parent="Status/SP"]
texture_filter = 1
position = Vector2(22.6519, 19.8425)
scale = Vector2(1.25, 1.25)
texture = ExtResource("3")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Status/SP/Sprite2D"]
modulate = Color(0.901961, 1, 0.333333, 0.4)
show_behind_parent = true
texture_filter = 1
position = Vector2(0, -3)
amount = 4
process_material = SubResource("3")
texture = ExtResource("1")
local_coords = true

[node name="Label2" type="Label" parent="Status/SP"]
texture_filter = 1
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 37.7678
offset_top = 4.27197
offset_right = 102.768
offset_bottom = 4.27197
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("4")
text = "x45"
label_settings = ExtResource("6_qywsl")

[node name="Label3" type="Label" parent="Status/SP"]
texture_filter = 1
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 34.9916
offset_top = 30.8628
offset_right = 99.9916
offset_bottom = 30.8628
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("5")
text = "SP"

[node name="StatusFP" type="NinePatchRect" parent="."]
self_modulate = Color(0.611765, 0.360784, 0.117647, 0.470588)
texture_filter = 1
layout_mode = 0
anchor_left = 0.222
anchor_right = 0.222
offset_left = 71.0
offset_top = -25.0
offset_right = 419.0
offset_bottom = 42.0
pivot_offset = Vector2(97.2139, 23.3081)
texture = ExtResource("5")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="FP" type="Control" parent="StatusFP"]
texture_filter = 1
anchors_preset = 0
offset_left = 189.729
offset_top = 34.1974
offset_right = 229.729
offset_bottom = 74.1974
tooltip_text = "rrrr"

[node name="Sprite2D" type="Sprite2D" parent="StatusFP/FP"]
texture_filter = 1
position = Vector2(18.6519, 13.8425)
scale = Vector2(1.25, 1.25)
texture = ExtResource("9")

[node name="GPUParticles2D" type="GPUParticles2D" parent="StatusFP/FP/Sprite2D"]
modulate = Color(0.556863, 1, 0.333333, 0.411765)
show_behind_parent = true
texture_filter = 1
position = Vector2(0, -3)
amount = 4
process_material = SubResource("3")
texture = ExtResource("1")
local_coords = true

[node name="Label2" type="Label" parent="StatusFP/FP"]
texture_filter = 1
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 47.2172
offset_top = -0.137763
offset_right = 112.217
offset_bottom = -0.137764
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("4")
text = "20/20"
label_settings = ExtResource("6_qywsl")

[node name="Label3" type="Label" parent="StatusFP/FP"]
texture_filter = 1
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 31.0
offset_top = 28.0
offset_right = 24.0
offset_bottom = 13.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("5")
text = "FP"

[node name="HP2" type="Control" parent="StatusFP"]
texture_filter = 1
anchors_preset = 0
offset_left = 17.9363
offset_top = 33.7586
offset_right = 57.9363
offset_bottom = 73.7586
tooltip_text = "rrrr"

[node name="Sprite2D" type="Sprite2D" parent="StatusFP/HP2"]
texture_filter = 1
position = Vector2(24.6519, 19.8425)
scale = Vector2(1.25, 1.25)
texture = ExtResource("4")

[node name="GPUParticles2D" type="GPUParticles2D" parent="StatusFP/HP2/Sprite2D"]
modulate = Color(1, 0.333333, 0.333333, 0.4)
show_behind_parent = true
texture_filter = 1
position = Vector2(0, -3)
amount = 4
process_material = SubResource("3")
texture = ExtResource("1")
local_coords = true

[node name="Label2" type="Label" parent="StatusFP/HP2"]
texture_filter = 1
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 47.2172
offset_top = -0.137763
offset_right = 112.217
offset_bottom = -0.137764
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("4")
text = "20/20"
label_settings = ExtResource("6_qywsl")

[node name="Label3" type="Label" parent="StatusFP/HP2"]
texture_filter = 1
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.7537
offset_top = 30.3331
offset_right = 95.7538
offset_bottom = 30.3331
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("6")
text = "GOOMBARIO"

[node name="StatusEXP" type="NinePatchRect" parent="."]
self_modulate = Color(0.611765, 0.360784, 0.117647, 0.470588)
texture_filter = 1
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -315.742
offset_top = -28.1381
offset_right = 36.2578
offset_bottom = 38.8619
pivot_offset = Vector2(315.111, 28.9086)
texture = ExtResource("5")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="EXP" type="Control" parent="StatusEXP"]
texture_filter = 1
anchors_preset = 0
offset_left = 20.7292
offset_top = 34.7586
offset_right = 60.7292
offset_bottom = 74.7586
tooltip_text = "rrrr"
focus_mode = 2

[node name="Sprite2D" type="AnimatedSprite2D" parent="StatusEXP/EXP"]
texture_filter = 1
position = Vector2(18.6519, 19.8425)
scale = Vector2(1.25, 1.25)
sprite_frames = ExtResource("6")
animation = &"spin"
autoplay = "spin"
frame_progress = 0.529232

[node name="Value" type="Label" parent="StatusEXP/EXP"]
texture_filter = 1
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 47.2172
offset_top = -0.137763
offset_right = 112.217
offset_bottom = -0.137764
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("4")
text = "x99"
label_settings = ExtResource("6_qywsl")

[node name="Label" type="Label" parent="StatusEXP/EXP"]
texture_filter = 1
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.7537
offset_top = 30.3331
offset_right = 95.7538
offset_bottom = 30.3331
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("5")
text = "EXP"

[node name="Coins" type="Control" parent="StatusEXP"]
texture_filter = 1
anchors_preset = 0
offset_left = 136.52
offset_top = 30.9587
offset_right = 176.52
offset_bottom = 70.9587

[node name="Sprite2D" type="AnimatedSprite2D" parent="StatusEXP/Coins"]
texture_filter = 1
position = Vector2(18.6519, 24.8425)
scale = Vector2(1.25, 1.25)
sprite_frames = SubResource("11")
autoplay = "default"
frame_progress = 0.852482

[node name="Value" type="Label" parent="StatusEXP/Coins"]
texture_filter = 1
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 37.7678
offset_top = 4.27197
offset_right = 102.768
offset_bottom = 4.27197
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("4")
text = "x999"
label_settings = ExtResource("6_qywsl")

[node name="Label" type="Label" parent="StatusEXP/Coins"]
texture_filter = 1
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 34.9916
offset_top = 30.8628
offset_right = 99.9916
offset_bottom = 30.8628
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("5")
text = "COINS"
